--- a/src/index.html
+++ b/src/index.html
@@ -52,42 +52,43 @@
             })
         }
     }
-    window.isSWUpdateAvailable = new Deferred();
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-            navigator.serviceWorker.register('./sw.js')
-                .then(reg => {
-                    window.serviceWorker = reg;
-                    if (reg.waiting) window.isSWUpdateAvailable.resolve(reg);
-                    reg.onupdatefound = () => {
-                        const installingWorker = reg.installing;
-                        installingWorker.onstatechange = () => {
-                            switch (installingWorker.state) {
-                                case 'installed':
-                                    if (navigator.serviceWorker.controller) {
-                                        // new update available
-                                        window.isSWUpdateAvailable.resolve(reg);
-                                    } // else handled by sw activate event (clients.claim)
-                                    break;
-                            }
-                        };
-                    };
-                })
-                .catch(err => {
-                    console.error('[SW ERROR]', err);
-                });
-            // reload once when the new Service Worker starts activating
-            //
-            // No need to do it there, we will show a prompt and perform a manual reload
-            //
-            // let refreshing;
-            // navigator.serviceWorker.addEventListener('controllerchange', () => {
-            //     if (refreshing) return;
-            //     refreshing = true;
-            //     window.location.reload();
-            // });
-        });
-    }
+    // window.isSWUpdateAvailable = new Deferred();
+    // if ('serviceWorker' in navigator) {
+    //     window.addEventListener('load', function() {
+    //         navigator.serviceWorker.register('./sw.js')
+    //             .then(reg => {
+    //                 window.serviceWorker = reg;
+    //                 if (reg.waiting) window.isSWUpdateAvailable.resolve(reg);
+    //                 reg.onupdatefound = () => {
+    //                     const installingWorker = reg.installing;
+    //                     installingWorker.onstatechange = () => {
+    //                         switch (installingWorker.state) {
+    //                             case 'installed':
+    //                                 if (navigator.serviceWorker.controller) {
+    //                                     // new update available
+    //                                     window.isSWUpdateAvailable.resolve(reg);
+    //                                 } // else handled by sw activate event (clients.claim)
+    //                                 break;
+    //                         }
+    //                     };
+    //                 };
+    //             })
+    //             .catch(err => {
+    //                 console.error('[SW ERROR]', err);
+    //             });
+    //         // reload once when the new Service Worker starts activating
+    //         //
+    //         // No need to do it there, we will show a prompt and perform a manual reload
+    //         //
+    //         // let refreshing;
+    //         // navigator.serviceWorker.addEventListener('controllerchange', () => {
+    //         //     if (refreshing) return;
+    //         //     refreshing = true;
+    //         //     window.location.reload();
+    //         // });
+    //     });
+    // }
+    
 </script>
 <noscript>Javascript est requis pour lancer FLYTAX</noscript>
 </html>
