changed theme-color for upcoming OSX Monterey

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./flytax-icons/180px.png">
     <link rel="manifest" href="./manifest.json">
     <meta name="msapplication-TileColor" content="#ECD444">
-    <meta name="theme-color" content="#FFFBFF">
+    <meta name="theme-color" content="#ECD444">
     
     <script defer src='{{{CONF_BUNDLE_JS}}}'></script>
 </head>
